...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ListView
            android:id="@+id/sign_list_view"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:divider="#ffffff"
            android:dividerHeight="0.25dp"/>

        </RelativeLayout>
...
