...
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/category_list_view"
                android:layout_width="match_parent"
                android:layout_height="425dp"
                android:divider="#ffffff"
                android:dividerHeight="0.25dp"
                />

...
