<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"/>
    <item android:title="Home">
        <menu>
            <item
                android:id="@+id/nav_Home"
                android:icon="@drawable/ic_action_home"
                android:title="Home" />

            <item
                android:id="@+id/nav_favourite"
                android:icon="@drawable/ic_checked_favourite"
                android:title="Favourite" />

        </menu>
    </item>


    <item android:title="Categories">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_fingerspelling"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Fingerspelling" />
            <item
                android:id="@+id/nav_numbers"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Numbers" />
            <item
                android:id="@+id/nav_colours"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Colours" />
            <item
                android:id="@+id/nav_greetings"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Greetings" />
            <item
                android:id="@+id/nav_cities"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Cities + Countries" />
            <item
                android:id="@+id/nav_family_members"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Family Members" />
            <item
                android:id="@+id/nav_work"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Work" />

            <item
                android:id="@+id/nav_personal_info"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Personal Information" />
            <item
                android:id="@+id/nav_day"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Days + Time" />
            <item
                android:id="@+id/regional_signs"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="Regional Signs"/>

        </group>
        </menu>
    </item>

    <item android:title="Quiz">
        <menu>
            <item
                android:id="@+id/nav_quiz"
                android:icon="@drawable/ic_faq"
                android:title="Quiz" />
            <item
                android:id="@+id/nav_progress"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="Progress" />
        </menu>
    </item>

    <item android:title="Deaf Awareness">
        <menu>
            <item
                android:id="@+id/nav_bsl_info"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="BSL Awareness" />
            <item
                android:id="@+id/FAQ"
                android:icon="@android:drawable/ic_menu_help"
                android:title="FAQ" />
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:title="Share" />
        </menu>
    </item>

</menu>
