<resources>
    <string name="app_name">BSLearn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name=".SignMaterialActivity">BSLearn</string>
...
